crates/stef-parser/tests/snapshots/parser__parse@struct-tuple.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-tuple.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Basic struct.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    [
                        UnnamedField {
                            ty: U32,
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 36,
                                    end: 38,
                                },
                            },
                            span: Span {
                                start: 32,
                                end: 38,
                            },
                        },
                        UnnamedField {
                            ty: Bool,
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 45,
                                    end: 47,
                                },
                            },
                            span: Span {
                                start: 39,
                                end: 47,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
