crates/stef-parser/tests/snapshots/parser__parse@struct_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Basic struct.\nstruct Sample {\n    a: u32 @1,\n    /// Second field\n    b: bool @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct_basic.stef
---
Schema {
    path: Some(
        "struct_basic.stef",
    ),
    source: "/// Basic struct.\nstruct Sample {\n    a: u32 @1,\n    /// Second field\n    b: bool @2,\n}\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Basic struct.",
                            span: Span {
                                start: 0,
                                end: 17,
                            },
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 25,
                        end: 31,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                                span: Span {
                                    start: 38,
                                    end: 39,
                                },
                            },
                            ty: Type {
                                value: U32,
                                span: Span {
                                    start: 41,
                                    end: 44,
                                },
                            },
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 45,
                                    end: 47,
                                },
                            },
                            span: Span {
                                start: 38,
                                end: 47,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [
                                    CommentLine {
                                        value: "Second field",
                                        span: Span {
                                            start: 53,
                                            end: 69,
                                        },
                                    },
                                ],
                            ),
                            name: Name {
                                value: "b",
                                span: Span {
                                    start: 74,
                                    end: 75,
                                },
                            },
                            ty: Type {
                                value: Bool,
                                span: Span {
                                    start: 77,
                                    end: 81,
                                },
                            },
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 82,
                                    end: 84,
                                },
                            },
                            span: Span {
                                start: 70,
                                end: 84,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
