crates/stef-parser/tests/snapshots/parser__parse@struct_generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct_generics.stef
---
Schema {
    path: Some(
        "struct_generics.stef",
    ),
    source: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Generic key-value pair.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "KeyValue",
                    span: Span {
                        start: 35,
                        end: 43,
                    },
                },
                generics: Generics(
                    [
                        Name {
                            value: "K",
                            span: Span {
                                start: 44,
                                end: 45,
                            },
                        },
                        Name {
                            value: "V",
                            span: Span {
                                start: 47,
                                end: 48,
                            },
                        },
                    ],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "key",
                                span: Span {
                                    start: 56,
                                    end: 59,
                                },
                            },
                            ty: External(
                                ExternalType {
                                    path: [],
                                    name: Name {
                                        value: "K",
                                        span: Span {
                                            start: 61,
                                            end: 62,
                                        },
                                    },
                                    generics: [],
                                },
                            ),
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 63,
                                    end: 65,
                                },
                            },
                            span: Span {
                                start: 56,
                                end: 65,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "value",
                                span: Span {
                                    start: 71,
                                    end: 76,
                                },
                            },
                            ty: External(
                                ExternalType {
                                    path: [],
                                    name: Name {
                                        value: "V",
                                        span: Span {
                                            start: 78,
                                            end: 79,
                                        },
                                    },
                                    generics: [],
                                },
                            ),
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 80,
                                    end: 82,
                                },
                            },
                            span: Span {
                                start: 71,
                                end: 82,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
