crates/stef-parser/tests/snapshots/parser__parse@struct_many_ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }"
input_file: crates/stef-parser/tests/inputs/struct_many_ws.stef
---
Schema {
    path: Some(
        "struct_many_ws.stef",
    ),
    source: "\n /// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Some comment",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 38,
                        end: 44,
                    },
                },
                generics: Generics(
                    [
                        Name {
                            value: "T",
                            span: Span {
                                start: 58,
                                end: 59,
                            },
                        },
                    ],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                                span: Span {
                                    start: 80,
                                    end: 81,
                                },
                            },
                            ty: Type {
                                value: U32,
                                span: Span {
                                    start: 86,
                                    end: 89,
                                },
                            },
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 93,
                                    end: 95,
                                },
                            },
                            span: Span {
                                start: 80,
                                end: 95,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "b",
                                span: Span {
                                    start: 103,
                                    end: 104,
                                },
                            },
                            ty: Type {
                                value: Bool,
                                span: Span {
                                    start: 109,
                                    end: 113,
                                },
                            },
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 116,
                                    end: 118,
                                },
                            },
                            span: Span {
                                start: 103,
                                end: 118,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "c",
                                span: Span {
                                    start: 126,
                                    end: 127,
                                },
                            },
                            ty: Type {
                                value: External(
                                    ExternalType {
                                        path: [],
                                        name: Name {
                                            value: "T",
                                            span: Span {
                                                start: 132,
                                                end: 133,
                                            },
                                        },
                                        generics: [],
                                    },
                                ),
                                span: Span {
                                    start: 132,
                                    end: 133,
                                },
                            },
                            id: Id {
                                value: 3,
                                span: Span {
                                    start: 139,
                                    end: 141,
                                },
                            },
                            span: Span {
                                start: 126,
                                end: 141,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
