crates/stef-parser/tests/snapshots/parser__parse@struct_tuple.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Basic struct.\nstruct Sample(u32 @1, bool @2)"
input_file: crates/stef-parser/tests/inputs/struct_tuple.stef
---
Schema {
    path: Some(
        "struct_tuple.stef",
    ),
    source: "/// Basic struct.\nstruct Sample(u32 @1, bool @2)\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Basic struct.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 25,
                        end: 31,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    [
                        UnnamedField {
                            ty: U32,
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 36,
                                    end: 38,
                                },
                            },
                            span: Span {
                                start: 32,
                                end: 38,
                            },
                        },
                        UnnamedField {
                            ty: Bool,
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 45,
                                    end: 47,
                                },
                            },
                            span: Span {
                                start: 39,
                                end: 47,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
